// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`tool parameters JSON Schema (wire shape) apply_patch 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "patchText": {
      "description": "The full patch text, starting with '*** Begin Patch' and ending with '*** End Patch'. Put the patch directly in this string, not inside JSON, shell commands, or code fences. For updates, use small hunks against the exact latest file contents; if a verification error says expected lines were not found, read the file again and retry with fresher, narrower context.",
      "type": "string",
    },
  },
  "required": [
    "patchText",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) bash 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "command": {
      "description": "The command to execute",
      "type": "string",
    },
    "description": {
      "description": 
"Clear, concise description of what this command does in 5-10 words. Examples:
Input: ls
Output: Lists files in current directory

Input: git status
Output: Shows working tree status

Input: npm install
Output: Installs package dependencies

Input: mkdir foo
Output: Creates directory 'foo'"
,
      "type": "string",
    },
    "timeout": {
      "description": "Optional timeout in milliseconds",
      "exclusiveMinimum": 0,
      "maximum": 9007199254740991,
      "type": "integer",
    },
    "workdir": {
      "description": "The working directory to run the command in. Defaults to the current directory. Use this instead of 'cd' commands.",
      "type": "string",
    },
  },
  "required": [
    "command",
    "description",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) edit 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "filePath": {
      "description": "The absolute path to the file to modify",
      "type": "string",
    },
    "newString": {
      "description": "Replacement text for oldString. Must be different from oldString.",
      "type": "string",
    },
    "oldString": {
      "description": "Exact text to replace. It must match one unique region in the current file unless replaceAll is true. Keep it as small as possible while still unique; do not include large unchanged regions.",
      "type": "string",
    },
    "replaceAll": {
      "description": "Replace every occurrence of oldString. Default false; leave false for targeted edits that must be unique.",
      "type": "boolean",
    },
  },
  "required": [
    "filePath",
    "oldString",
    "newString",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) glob 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "path": {
      "description": "The directory to search in. If not specified, the current working directory will be used. IMPORTANT: Omit this field to use the default directory. DO NOT enter "undefined" or "null" - simply omit it for the default behavior. Must be a valid directory path if provided.",
      "type": "string",
    },
    "pattern": {
      "description": "The glob pattern to match files against",
      "type": "string",
    },
  },
  "required": [
    "pattern",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) grep 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "include": {
      "description": "File pattern to include in the search (e.g. "*.js", "*.{ts,tsx}")",
      "type": "string",
    },
    "path": {
      "description": "The directory to search in. Defaults to the current working directory.",
      "type": "string",
    },
    "pattern": {
      "description": "The regex pattern to search for in file contents",
      "type": "string",
    },
  },
  "required": [
    "pattern",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) invalid 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "error": {
      "type": "string",
    },
    "tool": {
      "type": "string",
    },
  },
  "required": [
    "tool",
    "error",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) lsp 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "character": {
      "description": "The character offset (1-based, as shown in editors)",
      "maximum": 9007199254740991,
      "minimum": 1,
      "type": "integer",
    },
    "filePath": {
      "description": "The absolute or relative path to the file",
      "type": "string",
    },
    "line": {
      "description": "The line number (1-based, as shown in editors)",
      "maximum": 9007199254740991,
      "minimum": 1,
      "type": "integer",
    },
    "operation": {
      "description": "The LSP operation to perform",
      "enum": [
        "goToDefinition",
        "findReferences",
        "hover",
        "documentSymbol",
        "workspaceSymbol",
        "goToImplementation",
        "prepareCallHierarchy",
        "incomingCalls",
        "outgoingCalls",
      ],
      "type": "string",
    },
    "query": {
      "description": "Search query for workspaceSymbol. Empty string requests all symbols.",
      "type": "string",
    },
  },
  "required": [
    "operation",
    "filePath",
    "line",
    "character",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) loop 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "action": {
      "description": "Loop workflow action. Use activate to create/start a loop, draft to create a reviewable draft, show/list to inspect, update_agent to change the loop agent, and pause/resume/stop/delete/run_once for control.",
      "enum": [
        "draft",
        "activate",
        "show",
        "list",
        "pause",
        "resume",
        "stop",
        "delete",
        "run_once",
        "update_agent",
      ],
      "type": "string",
    },
    "agent": {
      "description": "Optional MendCode agent/profile name to use when the loop runner wakes this workflow. With action=update_agent, set this to the new agent name or an empty string to use the default agent.",
      "type": "string",
    },
    "budgetMode": {
      "description": "Loop budget semantics: fixed runs exactly to maxTurns, max-goal uses maxTurns as a cap and completes as soon as the goal is verified, unbounded-monitor runs until stopped/blocker.",
      "enum": [
        "fixed",
        "max-goal",
        "unbounded-monitor",
      ],
      "type": "string",
    },
    "completionCriteria": {
      "description": "Concrete criteria that prove the loop goal is complete. Required for max-goal implementation loops.",
      "items": {
        "type": "string",
      },
      "type": "array",
    },
    "ensureService": {
      "description": "When activating, best-effort start the project loop service so wakeups continue outside the TUI.",
      "type": "boolean",
    },
    "gates": {
      "description": "Review, permission, safety, or quality gates the loop must respect.",
      "items": {
        "type": "string",
      },
      "type": "array",
    },
    "intervalMs": {
      "description": "Interval in milliseconds when triggerMode is interval.",
      "type": "number",
    },
    "maxChildren": {
      "description": "Maximum child/subagent sessions the loop should create while working.",
      "type": "number",
    },
    "maxDepth": {
      "description": "Maximum recursive/delegation depth for loop work.",
      "type": "number",
    },
    "maxRuntimeMs": {
      "description": "Maximum wall-clock runtime in milliseconds before the loop should stop.",
      "type": "number",
    },
    "maxTurns": {
      "description": "Iteration budget/cap. For goal work this is a maximum, not a plan to spend every iteration. Use budgetMode=fixed only for exactly-N iteration jobs.",
      "type": "number",
    },
    "model": {
      "description": "Optional model for loop iterations in provider/model-id format. A trailing #variant is accepted, for example openai/gpt-5.5#medium.",
      "type": "string",
    },
    "name": {
      "description": "Short workflow name when creating a draft or activating a new loop.",
      "type": "string",
    },
    "notifyOwnerOnComplete": {
      "description": "When true, wake the parent session with a loop completion summary after a max-goal loop completes.",
      "type": "boolean",
    },
    "objective": {
      "description": "Durable loop objective. Required when creating a draft or activating a new loop.",
      "type": "string",
    },
    "permissionMode": {
      "description": "Loop execution permission mode. Use report-only by default, normal only after explicit user approval, or custom with gates/approval lists.",
      "enum": [
        "report-only",
        "normal",
        "custom",
      ],
      "type": "string",
    },
    "reason": {
      "description": "Short reason recorded in the loop journal for this action.",
      "type": "string",
    },
    "reportOnly": {
      "description": "Whether the loop should inspect and report without editing. Defaults to true for newly created loops.",
      "type": "boolean",
    },
    "reserveTurns": {
      "description": "Number of final budget turns reserved for validation, cleanup, retry, or blocker reporting.",
      "type": "number",
    },
    "stopWhen": {
      "description": "Natural-language stop conditions for the loop.",
      "items": {
        "type": "string",
      },
      "type": "array",
    },
    "successChecks": {
      "description": "Validation commands, inspections, or review checks the loop should run before reporting complete.",
      "items": {
        "type": "string",
      },
      "type": "array",
    },
    "targetTurns": {
      "description": "Soft target number of iterations to finish the goal before using the remaining budget for recovery/verification.",
      "type": "number",
    },
    "triggerMode": {
      "description": "How the loop wakes up. Use manual for on-demand tests or interval for scheduled background loops.",
      "enum": [
        "manual",
        "interval",
        "adaptive",
        "external-signal",
        "self-paced",
      ],
      "type": "string",
    },
    "variant": {
      "description": "Optional model variant/reasoning effort for loop iterations, for example low, medium, high, or max. Use this when the user says reasoning medium/high/etc.",
      "type": "string",
    },
    "workflowID": {
      "description": "Existing loop workflow id. Provide it for precise show, pause, resume, stop, and run_once actions. If omitted, the tool may resolve the current session's contextual loop or fall back to a list.",
      "type": "string",
    },
  },
  "required": [
    "action",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) plan 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {},
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) question 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "questions": {
      "description": "Questions to ask",
      "items": {
        "properties": {
          "header": {
            "description": "Very short label (max 30 chars)",
            "type": "string",
          },
          "multiple": {
            "description": "Allow selecting multiple choices",
            "type": "boolean",
          },
          "options": {
            "description": "Available choices",
            "items": {
              "properties": {
                "description": {
                  "description": "Explanation of choice",
                  "type": "string",
                },
                "label": {
                  "description": "Display text (1-5 words, concise)",
                  "type": "string",
                },
              },
              "ref": "QuestionOption",
              "required": [
                "label",
                "description",
              ],
              "type": "object",
            },
            "type": "array",
          },
          "question": {
            "description": "Complete question",
            "type": "string",
          },
        },
        "ref": "QuestionPrompt",
        "required": [
          "question",
          "header",
          "options",
        ],
        "type": "object",
      },
      "type": "array",
    },
  },
  "required": [
    "questions",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) read 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "filePath": {
      "description": "The absolute path to the file or directory to read",
      "type": "string",
    },
    "limit": {
      "description": "The maximum number of lines to read (defaults to 2000)",
      "maximum": 9007199254740991,
      "minimum": 0,
      "type": "integer",
    },
    "offset": {
      "description": "The line number to start reading from (1-indexed)",
      "maximum": 9007199254740991,
      "minimum": 0,
      "type": "integer",
    },
  },
  "required": [
    "filePath",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) review 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "action": {
      "description": "Review workspace action.",
      "enum": [
        "current",
        "summary",
        "file",
        "navigate",
        "reload",
        "comment_add",
        "comment_list",
        "comment_clear",
      ],
      "type": "string",
    },
    "author": {
      "description": "Comment author. Defaults to assistant.",
      "enum": [
        "user",
        "agent",
        "assistant",
      ],
      "type": "string",
    },
    "blockIndex": {
      "description": "Zero-based diff block index for navigate or comment_add.",
      "type": "number",
    },
    "body": {
      "description": "Comment body for comment_add.",
      "type": "string",
    },
    "direction": {
      "description": "Navigation direction for navigate.",
      "enum": [
        "next-file",
        "prev-file",
        "next-block",
        "prev-block",
      ],
      "type": "string",
    },
    "filePath": {
      "description": "File path for file, navigate, comment_add, or comment_clear.",
      "type": "string",
    },
    "includePatch": {
      "description": "For file action only. Include raw patch for the selected or requested file.",
      "type": "boolean",
    },
    "line": {
      "description": "Line number for comment_add.",
      "type": "number",
    },
    "side": {
      "description": "Diff side for comment_add line anchors.",
      "enum": [
        "old",
        "new",
        "both",
      ],
      "type": "string",
    },
    "staleOnly": {
      "description": "For comment_clear only. Clear only stale comments.",
      "type": "boolean",
    },
  },
  "required": [
    "action",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) skill 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "name": {
      "description": "The name of the skill from available_skills",
      "type": "string",
    },
  },
  "required": [
    "name",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) task 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "command": {
      "description": "The command that triggered this task",
      "type": "string",
    },
    "description": {
      "description": "A short (3-5 words) description of the task",
      "type": "string",
    },
    "model": {
      "$ref": "https://models.dev/model-schema.json#/$defs/Model",
      "description": "Optional model to use for this subagent in provider/model-id format. Must be one of the models available in MendCode.",
      "type": "string",
    },
    "prompt": {
      "description": "The task for the agent to perform",
      "type": "string",
    },
    "subagent_type": {
      "description": "The type of specialized agent to use for this task",
      "type": "string",
    },
    "task_id": {
      "description": "This should only be set if you mean to resume a previous task (you can pass a prior task_id and the task will continue the same subagent session as before instead of creating a fresh one)",
      "type": "string",
    },
  },
  "required": [
    "description",
    "prompt",
    "subagent_type",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) todo 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "todos": {
      "description": "The updated todo list",
      "items": {
        "properties": {
          "content": {
            "description": "Brief description of the task",
            "type": "string",
          },
          "priority": {
            "description": "Priority level of the task: high, medium, low",
            "type": "string",
          },
          "status": {
            "description": "Current status of the task: pending, in_progress, completed, cancelled",
            "type": "string",
          },
        },
        "required": [
          "content",
          "status",
          "priority",
        ],
        "type": "object",
      },
      "type": "array",
    },
  },
  "required": [
    "todos",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) webfetch 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "format": {
      "default": "markdown",
      "description": "The format to return the content in (text, markdown, or html). Defaults to markdown.",
      "enum": [
        "text",
        "markdown",
        "html",
      ],
      "type": "string",
    },
    "timeout": {
      "description": "Optional timeout in seconds (max 120)",
      "type": "number",
    },
    "url": {
      "description": "The URL to fetch content from",
      "type": "string",
    },
  },
  "required": [
    "url",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) websearch 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "contextMaxCharacters": {
      "description": "Maximum characters for context string optimized for LLMs (default: 10000)",
      "type": "number",
    },
    "livecrawl": {
      "description": "Live crawl mode - 'fallback': use live crawling as backup if cached content unavailable, 'preferred': prioritize live crawling (default: 'fallback')",
      "enum": [
        "fallback",
        "preferred",
      ],
      "type": "string",
    },
    "numResults": {
      "description": "Number of search results to return (default: 8)",
      "type": "number",
    },
    "query": {
      "description": "Websearch query",
      "type": "string",
    },
    "type": {
      "description": "Search type - 'auto': balanced search (default), 'fast': quick results, 'deep': comprehensive search",
      "enum": [
        "auto",
        "fast",
        "deep",
      ],
      "type": "string",
    },
  },
  "required": [
    "query",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) write 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "content": {
      "description": "The content to write to the file",
      "type": "string",
    },
    "filePath": {
      "description": "The absolute path to the file to write (must be absolute, not relative)",
      "type": "string",
    },
  },
  "required": [
    "content",
    "filePath",
  ],
  "type": "object",
}
`;
